oasis-macros/tests/ui/new_bad_ret.stderr
error: `Counter::new` must return `Result<Self>`
 --> $DIR/new_bad_ret.rs:8:53
  |
8 |         pub fn new(ctx: &Context, start_count: u32) -> Self {
  |                                                     ^^

error: aborting due to previous error

